src/app/pages/details/details.scss
@import 'variables';
@import 'mixins';


.details-page {
    position: relative;

    h2,
    h3,
    h4 {
        letter-spacing: -0.1rem;
    }

    .table-of-contents-link {
        cursor: pointer;
    }

    .table-of-contents {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        height: 100%;
        width: 100%;
        z-index: 100;
        overflow-y: auto;
        opacity: 1;
        transition: opacity 0.3s;

        @include desktop {
            background-color: rgba(color(neutral-dark), 0.90);
        }

        &.hidden {
            display: initial;
            width: 0;
            height: 0;
            overflow: hidden;
            opacity: 0;
        }

        .box {
            background-color: rgba(color(neutral-lightest), 0.97);
            padding: 7.5rem 1.5rem 1.5rem;
            font-weight: 500;

            @include desktop {
                position: absolute;
                left: 50%;
                top: 60%;
                padding: 1.5rem;
                max-width: 60rem;
                width: 100%;
                max-height: 60rem;
                overflow-y: auto;
                transform: translate3d(-50%, -60%, 0);
            }

            .subunit {
                margin-left: 1.5rem;
                font-weight: 300;
            }

        }
    }

    .container {
        display: flex;
        margin: 0 auto;
        padding: 0 1.5rem;
        position: relative;
        max-width: $boxed-width;
        flex-flow: column wrap;

        @include tablet {
            flex-flow: row wrap;
        }

        @include desktop {
            flex-flow: row wrap;
        }
    }

    .cta > .btn {
        width: 100%;
        font-variant: normal;
        padding: 1.5rem;
        text-transform: uppercase;
    }

    .btn:hover,
    .btn:focus {
        transform: scale3d(1, 1, 1);
        background-color: darken(color(orange), 5%);
    }

    .book-info {
        justify-content: space-between;
        margin-bottom: 6rem;

        @media (min-width: 500px) {
            margin: 6rem auto;
        }

        .book-cover {
            width: 100vw;
            order: 1;
            align-self: flex-start;
            margin: 0 -1.5rem 3rem;

            @media (min-width: 500px) {
                margin: 0 1.5rem 3rem 0;
                width: 25rem;
            }

            @include desktop {
                width: 25rem;
            }
        }

        .floating-menu {
            order: 2;
            flex: 1 100%;
            margin-bottom: 3rem;

            @media (min-width: 500px) {
                flex: 0 0 auto;
                width: 20rem;
            }

            @include desktop {
                order: 3;
                position: fixed;
                left: 50%;
                top: 15rem;
                max-width: 120rem;
                width: 100%;
                transform: translate3d(-50%, 0, 0);
                z-index: 1;
                margin-bottom: 0;
            }

            .box {
                @include desktop {
                    width: 25rem;
                    position: absolute;
                    top: 0;
                    right: 0;
                    background-color: rgba(color(neutral-lightest), 0.95);
                    padding: 1.5rem;
                }
            }

            .notes {
                color: color(gray);
            }

            .cta {
                color: color(gray);

                .btn:last-child {
                    background-color: color(neutral-medium);
                    margin-top: 1rem;

                    &:hover,
                    &:focus {
                        transform: scale3d(1, 1, 1);
                        background-color: darken(color(neutral-medium), 5%);
                    }
                }
            }
        }

        .details {
            order: 3;
            font-size: 1.6rem;
            line-height: 2.6rem;
            color: color(neutral-dark);

            @include tablet {
                flex: 1 100%;
            }



            @include desktop {
                order: 2;
                padding: 0 25rem 0 0;
                flex: 1 0;
            }

            @media (min-width: 830px) {
                padding-left: 1.5rem;
            }

            h1 {
                line-height: 1;
            }

            a {
                color: color(cyan);

                &:hover {
                    color: darken(color(cyan), 10%);
                }
            }
        }

        .tabs {
            a:not(:last-child)::after {
                content: ' | ';
                display: inline;
                color: color(neutral-dark);
            }
        }

        .links {
            margin: 1rem 0;

            a {
                position: relative;

                &::before,
                &::after {
                    border-right: 0.2rem solid;
                    content: '';
                    display: block;
                    height: 0.7rem;
                    margin-top: -0.2rem;
                    position: absolute;
                    transform: rotate3d(0, 0, 1, 135deg);
                    right: -1.3rem;
                    top: 50%;
                    width: 0;
                }

                &::after {
                    right: -1.7rem;
                    transform: rotate3d(0, 0, 1, 45deg);
                }
            }
        }
    }

    .endorsement {
        background-color: color(green);
        color: color(neutral-lightest);

        blockquote {
            position: relative;
            quotes: '\201C''\201D''\2018''\2019';

            @include desktop {
                margin-left: 7.5rem;

            }

            &::before {
                color: color(gold);
                content: open-quote;
                font-size: 15rem;
                line-height: 0;
                position: absolute;
                top: 6rem;
                left: -5.5rem;

                @include desktop {
                    font-size: 18rem;
                    top: 7rem;
                    left: -9rem;
                }
            }

            p {
                font-size: 2.4rem;
                font-weight: 500;
                font-style: italic;
                margin: 0;

                @include desktop {
                    font-size: 3.2rem;
                }
            }

            .attribution {
                display: inline-block;
                font-size: 1.6rem;
                margin-top: 2.5rem;
                text-align: right;


                @include desktop {
                    font-size: 2.2rem;
                }
            }
        }

        .container {
            padding: 6rem 1.5rem;

            @include desktop {
                padding: 6rem 25rem 6rem 1.5rem;
            }
        }
    }

    .strips {
        margin: 0;
    }

    .resources {
        font-size: 1.6rem;
        line-height: 2.6rem;
        color: color(neutral-dark);
        background-color: lighten(color(neutral-lighter), 8%);

        h2 {
            margin-bottom: 0;
        }

        .container {
            padding: 6rem 1.5rem;

            @include desktop {
                padding: 6rem 27.5rem 6rem 1.5rem;
            }
        }

        .row {
            flex: 0 0 100%;
            margin-bottom: 2.5rem;

        }

        .cta {
            flex: 0 0 100%;
        }
    }

    .resource {
        display: flex;
        flex-flow: column nowrap;

        @include tablet {
            flex-flow: row wrap;
        }

        @include desktop {
            flex-flow: row wrap;
        }

        > div {
            background-color: color(neutral-lightest);
            padding: 1.5rem;
            margin-bottom: 1.5rem;

            @media (min-width: #{breakpoints(phone) + 1}) {
                flex: 0 0 48%;

                &:nth-child(odd):not(:only-child):not(:last-child) {
                    margin-right: 1.5rem;
                }
            }

            @media (min-width: 900px) {
                flex: 0 0 31%;
                margin-right: 1.5rem;
            }

            h4 {
                color: color(blue);
                margin-bottom: 1rem;
            }

            a {
                color: color(cyan);
                text-transform: uppercase;
                font-size: 1.4rem;
                font-weight: 500;

                &:hover {
                    color: darken(color(cyan), 10%);
                }
            }
        }
    }

    .authors {
        font-size: 1.6rem;
        line-height: 2.6rem;
        margin: 6rem 0 3rem;

        .container {
            flex-flow: column wrap;

            @include desktop {
                padding: 0 27.5rem 0 1.5rem;
            }
        }
    }

    .ally-info {
        .text a {
            position: relative;

            &::before,
            &::after {
                border-right: 0.2rem solid;
                content: '';
                display: block;
                height: 0.7rem;
                position: absolute;
                transform: rotate3d(0, 0, 1, 135deg);
                right: -1.3rem;
                top: 0.3rem;
                width: 0;
            }

            &::after {
                top: 0.7rem;
                right: -1.3rem;
                transform: rotate3d(0, 0, 1, 45deg);
            }
        }

        .logo {
            display: flex;
            margin-bottom: 3rem;
            justify-content: center;
            align-items: center;

            img {
                width: 100%;
                max-width: 20rem;

            }
        }
    }

    .errata {
        font-size: 1.6rem;
        line-height: 2.6rem;
        margin: 0 0 6rem;

        .container {
            flex-flow: column wrap;

            @include desktop {
                padding: 0 27.5rem 0 1.5rem;
            }
        }

        h2 {
            margin-bottom: 0;
        }

        .links {
            list-style: none;
            margin: 0;
            padding: 0;
            cursor: pointer;
        }

        .go-to {
            position: relative;

            &::before,
            &::after {
                border-right: 0.2rem solid;
                content: '';
                display: block;
                height: 0.7rem;
                position: absolute;
                transform: rotate3d(0, 0, 1, 135deg);
                right: -1.3rem;
                top: 0.7rem;
                width: 0;
            }

            &::after {
                top: 1.1rem;
                right: -1.3rem;
                transform: rotate3d(0, 0, 1, 45deg);
            }

            &:hover {
                color: darken(color(cyan), 10%);
            }
        }
    }
}

